--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
+        <a href="index.html"><img src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
         <!--Logo - color code is #bc0000 -->
         <h1>Fenrir</h1> <!--Gaming Company Name-->
         <nav>
