--- a/pages/data.htm
+++ b/pages/data.htm
@@ -46,7 +46,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100"
+        <a href="index.html"><img class="logo" src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100"
                 width="100"></a>
         <!--Logo - color code is #bc0000 -->
         <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
