--- a/pages/about.html
+++ b/pages/about.html
@@ -96,14 +96,14 @@
     <script>
         function showMonique() {
             document.getElementById("staff-name").innerText = "Monique Wright - CEO";
-            document.getElementById("staff-img").src = "woman_ceo.jpeg";
+            document.getElementById("staff-img").src = "../images/woman_ceo.jpeg";
             document.getElementById("staff-text").innerText = "With a passion for gaming and a commitment to building a positive and inclusive community, Monique has been instrumental in shaping the direction and success of the company. Under her guidance, Fenrir has become a leading gaming platform within the gaming industry.";
         }
         window.onload = showMonique;
 
         function showYasmine() {
             document.getElementById("staff-name").innerText = "Yasmine Rodriguez - CFO";
-            document.getElementById("staff-img").src = "woman_coo.jpg";
+            document.getElementById("staff-img").src = "../images/woman_coo.jpg";
             document.getElementById("staff-text").innerText = "Meet Yasmine Rodriguez, the operational powerhouse behind Fenrir. With a background in management and a passion for efficiency, Yasmine has been instrumental in ensuring the smooth and seamless operation of the company. Under her leadership, Fenrir has achieved impressive efficiency and scalability, allowing the company to continue to grow and expand its offerings to players.";
         }
     </script>
