--- a/pages/about.html
+++ b/pages/about.html
@@ -6,14 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-        section img {
-            border-radius: 10px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            height: 100px;
-            width: 100px;
-        }
-    </style>
     <title>Fenrir - About Us</title>
 </head>
 
@@ -37,13 +29,50 @@
     </header>
 
     <section class="grid-container">
-        
+        <div class="image-container">
+            <img src="../images/gaming_image1.jpg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container">
+            <img src="../images/gaming_image2.jpg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container">
+            <img src="../images/gaming_image3.jpeg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container">
+            <img src="../images/gaming_image4.jpeg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container">
+            <img src="../images/gaming_image5.jpg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container">
+            <img src="../images/gaming_image6.jpg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class="image-container large-width">
+            <img src="../images/gaming_image7.jpg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
+
+        <div class=".image-container.large-height">
+            <img src="../images/gaming_image8.jpeg" alt="Image 1">
+            <p class="caption">Caption for Image 5</p>
+        </div>
     </section>
 
     <main>
         <section>
-            <h2>Our History</h2>
-            <img src="fenrir_team.png" alt="picture of gaming company team">
+            <h2>About Us</h2>
             <p>Founded in 2014, Fenrir was a passion project founded by a group of gaming enthusiasts who wanted to
                 create a
                 platform for players
