--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,7 @@
                 <p>If you're a gamer looking for a platform that celebrates your passion and provides you with endless
                     opportunities for gaming, look no further than Fenrir. Join us today and become a part of the pack!
                 </p>
+            </section>
         </article>
     </main>
 
