--- a/pages/about.html
+++ b/pages/about.html
@@ -6,25 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        
+    </style>
     <title>Fenrir - About Us</title>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
-        <!--Logo - color code is #bc0000 -->
-        <h1>Fenrir</h1> <!--Gaming Company Name-->
+        <a href="index.html"><img class="logo" src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100"
+                width="100"></a>
+        <!--Logo color code is #bc0000 -->
+        <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="data.htm">Featured Games</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="join.htm">Join</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <p><a href="../pages/index.html">Home</a></p>
+            <p><a href="../pages/about.html">About Us</a></p>
+            <p><a href="../pages/data.html">Games</a></p>
+            <p><a href="../pages/join.html">Join</a></p>
+            <p><a href="#">Contact</a></p>
         </nav>
     </header>
 
@@ -35,37 +34,37 @@
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image2.jpg" alt="Image 1">
+            <img src="../images/gaming_image2.jpg" alt="Image 2">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image3.jpeg" alt="Image 1">
+            <img src="../images/gaming_image3.jpeg" alt="Image 3">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image4.jpeg" alt="Image 1">
+            <img src="../images/gaming_image4.jpeg" alt="Image 4">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image5.jpg" alt="Image 1">
+            <img src="../images/gaming_image5.jpg" alt="Image 5">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image6.jpg" alt="Image 1">
+            <img src="../images/gaming_image6.jpg" alt="Image 6">
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class="image-container large-width">
-            <img src="../images/gaming_image7.jpg" alt="Image 1">
+        <div class="image-container">
+            <img src="../images/gaming_image7.jpg" alt="Image 7">
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class=".image-container.large-height">
-            <img src="../images/gaming_image8.jpeg" alt="Image 1">
+        <div class="image-container">
+            <img src="../images/gaming_image8.jpeg" alt="Image 8">
             <p class="caption">Caption for Image 5</p>
         </div>
     </section>
@@ -120,6 +119,8 @@
             <p id="staff-text"></p>
         </section>
         <hr>
+    
+        <p><a href="../pages/index.html">Return to home page</a></p>
     </main>
 
     <script>
@@ -138,7 +139,7 @@
     </script>
 
     <footer class="footer-text">
-        <p>Site copyright © 2023 Fenrir</p>
+        <p>Site copyright &copy; 2023 Fenrir</p>
     </footer>
 </body>
 
