--- a/pages/about.html
+++ b/pages/about.html
@@ -58,19 +58,19 @@
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class="image-container">
+        <div class=".large-height">
             <img src="../images/gaming_image7.jpg" alt="Image 7">
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class="image-container">
+        <div class=".large-width">
             <img src="../images/gaming_image8.jpeg" alt="Image 8">
             <p class="caption">Caption for Image 5</p>
         </div>
     </section>
 
     <main>
-        <section>
+        <section class="about-us">
             <h2>About Us</h2>
             <p>Founded in 2014, Fenrir was a passion project founded by a group of gaming enthusiasts who wanted to
                 create a
