--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
             <p><a href="../pages/about.html">About Us</a></p>
             <p><a href="../pages/data.html">Games</a></p>
             <p><a href="../pages/join.html">Join</a></p>
-            <p><a href="#">Contact</a></p>
+            <p><a href="../pages/shapes.html">Shapes</a></p>
         </nav>
     </header>
 
