--- a/pages/shapes.html
+++ b/pages/shapes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Fenrir - Shapes</title>
 </head>
+
 <body>
     <header>
         <a href="index.html"><img class="logo" src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100"
@@ -22,8 +24,35 @@
         </nav>
     </header>
 
+    <main class="shapes">
+        <section>
+            <div id="section1" class="dark-square">1</div>
+        </section>
+        <section>
+            <div id="section2" class="dark-square">2</div>
+        </section>
+        <section>
+            <div id="section3" class="dark-square">3</div>
+        </section>
+        <section>
+            <div id="section4" class="dark-square">4</div>
+        </section>
+        <section>
+            <div id="section5" class="dark-square">5</div>
+        </section>
+    </main>
+
+    <ol id="transformations-list">
+        <li>No transformation</li>
+        <li>Translation</li>
+        <li>Rotation</li>
+        <li>Scale</li>
+        <li>Skew</li>
+      </ol>
+
     <footer class="footer-text">
         <p>Site copyright &copy; 2023 Fenrir</p>
     </footer>
 </body>
+
 </html>
