--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,7 @@
 
     <main>
         <h1>Welcome to the Home of Gaming</h1>
+        <div class="articles-container"></div>
         <article>
             <section>
                 <h2>Background</h2>
@@ -46,6 +47,7 @@
                 </p>
             </section>
         </article>
+        </div>
     </main>
 
     <footer class="footer-text">
