--- a/pages/about.html
+++ b/pages/about.html
@@ -28,46 +28,81 @@
     </header>
 
     <section class="grid-container">
+        <div class="grid-item">
+          <img src="../images/gaming_image1.png" alt="Image 1">
+          <p class="caption">Caption 1</p>
+        </div>
+        <div class="grid-item">
+          <img src="../images/gaming_image2.png" alt="Image 2">
+          <p class="caption">Caption 2</p>
+        </div>
+        <div class="grid-item">
+          <img src="../images/gaming_image3.png" alt="Image 3">
+          <p class="caption">Caption 3</p>
+        </div>
+        <div class="grid-item">
+          <img src="../images/gaming_image4.png" alt="Image 4">
+          <p class="caption">Caption 4</p>
+        </div>
+        <div class="grid-item">
+          <img src="../images/gaming_image5.png" alt="Image 5">
+          <p class="caption">Caption 5</p>
+        </div>
+        <div class="grid-item">
+          <img src="../images/gaming_image6.png" alt="Image 6">
+          <p class="caption">Caption 6</p>
+        </div>
+        <div class="grid-item grid-item-wide">
+          <img src="../images/gaming_image7.png" alt="Image 7">
+          <p class="caption">Caption 7</p>
+        </div>
+        <div class="grid-item grid-item-tall">
+          <img src="../images/gaming_image8.png" alt="Image 8">
+          <p class="caption">Caption 8</p>
+        </div>
+      </section>
+
+    <!-- <section class="grid-container">
         <div class="image-container">
-            <img src="../images/gaming_image1.jpg" alt="Image 1">
+            <img src="../images/gaming_image1.png" alt="Image 1">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image2.jpg" alt="Image 2">
+            <img src="../images/gaming_image2.png" alt="Image 2">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image3.jpeg" alt="Image 3">
+            <img src="../images/gaming_image3.png" alt="Image 3">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image4.jpeg" alt="Image 4">
+            <img src="../images/gaming_image4.png" alt="Image 4">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image5.jpg" alt="Image 5">
+            <img src="../images/gaming_image5.png" alt="Image 5">
             <p class="caption">Caption for Image 5</p>
         </div>
 
         <div class="image-container">
-            <img src="../images/gaming_image6.jpg" alt="Image 6">
+            <img src="../images/gaming_image6.png" alt="Image 6">
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class=".large-height">
-            <img src="../images/gaming_image7.jpg" alt="Image 7">
+        <div class="large-height">
+            <img src="../images/gaming_image7.png" alt="Image 7">
             <p class="caption">Caption for Image 5</p>
         </div>
 
-        <div class=".large-width">
-            <img src="../images/gaming_image8.jpeg" alt="Image 8">
+        <div class="large-width">
+            <img src="../images/gaming_image8.png" alt="Image 8">
             <p class="caption">Caption for Image 5</p>
         </div>
-    </section>
+    </section> -->
 
     <main>
         <section class="about-us">
