--- a/pages/join.html
+++ b/pages/join.html
@@ -8,188 +8,200 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         /* Custom properties */
-    :root {
-        --color-red: #bc0000;
-        --color-white: #fff;
-        --color-black: black;
-    }
+        :root {
+            --color-red: #bc0000;
+            --color-white: #fff;
+            --color-black: black;
+        }
 
-    /* Global styles */
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f1f1f1;
-    }
+        /* Global styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+        }
 
-    /* Form styles */
-    form {
-        max-width: 500px;
-        margin: 0 auto;
-        padding: 20px;
-        border: 2px solid var(--color-red);
-        border-radius: 10px;
-        background-color: var(--color-white);
-    }
+        /* Form styles */
+        form {
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 2px solid var(--color-red);
+            border-radius: 10px;
+            background-color: var(--color-white);
+        }
 
-    fieldset {
-        margin-bottom: 20px;
-        padding: 10px;
-        border: 2px solid var(--color-red);
-        border-radius: 5px;
-    }
+        fieldset {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 2px solid var(--color-red);
+            border-radius: 5px;
+        }
 
-    legend {
-        font-weight: bold;
-        color: var(--color-red);
-    }
+        legend {
+            font-weight: bold;
+            color: var(--color-red);
+        }
 
-    label {
-        display: inline-block;
-        margin-bottom: 5px;
-        font-weight: bold;
-        color: var(--color-black);
-    }
+        label {
+            display: inline-block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            color: var(--color-black);
+        }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"],
-    textarea {
-        display: block;
-        margin-bottom: 10px;
-        padding: 5px;
-        border: 1px solid var(--color-black);
-        border-radius: 5px;
-        width: 100%;
-    }
+        input[type="text"],
+        input[type="email"],
+        input[type="tel"],
+        textarea {
+            display: block;
+            margin-bottom: 10px;
+            padding: 5px;
+            border: 1px solid var(--color-black);
+            border-radius: 5px;
+            width: 100%;
+        }
 
-    input[type="checkbox"],
-    input[type="radio"] {
-        margin-right: 5px;
-    }
+        input[type="checkbox"],
+        input[type="radio"] {
+            margin-right: 5px;
+        }
 
-    input[type="submit"],
-    input[type="reset"] {
-        display: inline-block;
-        margin: 20px 0 0 auto;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        background-color: var(--color-red);
-        color: var(--color-white);
-        font-weight: bold;
-        cursor: pointer;
-    }
+        input[type="submit"],
+        input[type="reset"] {
+            display: inline-block;
+            margin: 20px 0 0 auto;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: var(--color-red);
+            color: var(--color-white);
+            font-weight: bold;
+            cursor: pointer;
+        }
 
-    input[type="submit"]:hover,
-    input[type="reset"]:hover {
-        background-color: var(--color-black);
-    }
+        input[type="submit"]:hover,
+        input[type="reset"]:hover {
+            background-color: var(--color-black);
+        }
 
-    /* Six different selectors */
-    .mailinglist {
-        font-size: 24px;
-        color: var(--color-black);
-    }
+        /* Six different selectors */
+        .mailinglist {
+            font-size: 24px;
+            color: var(--color-black);
+        }
 
-    #name {
-        font-weight: bold;
-    }
+        #name {
+            font-weight: bold;
+        }
 
-    #address {
-        background-color: #f9f9f9;
-    }
+        #address {
+            background-color: #f9f9f9;
+        }
 
-    #email {
-        border-color: var(--color-black);
-    }
+        #email {
+            border-color: var(--color-black);
+        }
 
-    #phone {
-        border-color: var(--color-black);
-    }
+        #phone {
+            border-color: var(--color-black);
+        }
 
-    input[type="checkbox"] + label {
-        font-style: italic;
-        color: var(--color-black);
-    }
+        input[type="checkbox"]+label {
+            font-style: italic;
+            color: var(--color-black);
+        }
+        /*keep footer at bottom of screen*/
+        .container {
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            min-height: 100vh;
+        }
+
+        .footer-text {
+            grid-row: 3;
+        }
     </style>
     <title>Fenrir - Join</title>
 </head>
 
 <body>
-    <header>
-        <a href="index.html"><img class="logo" src="../images/fenrir_logo.png" alt="three-headed wolf logo" height="100"
-                width="100"></a>
-        <!--Logo color code is #bc0000 -->
-        <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
-        <nav>
-            <p><a href="../pages/index.html">Home</a></p>
-            <p><a href="../pages/about.html">About Us</a></p>
-            <p><a href="../pages/data.html">Games</a></p>
-            <p><a href="../pages/join.html">Join</a></p>
-            <p><a href="../pages/shapes.html">Shapes</a></p>
-        </nav>
-    </header>
+    <div class="containter">
+        <header>
+            <a href="index.html"><img class="logo" src="../images/fenrir_logo.png" alt="three-headed wolf logo"
+                    height="100" width="100"></a>
+            <!--Logo color code is #bc0000 -->
+            <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
+            <nav>
+                <p><a href="../pages/index.html">Home</a></p>
+                <p><a href="../pages/about.html">About Us</a></p>
+                <p><a href="../pages/data.html">Games</a></p>
+                <p><a href="../pages/join.html">Join</a></p>
+                <p><a href="../pages/shapes.html">Shapes</a></p>
+            </nav>
+        </header>
 
-    <form>
-        <h2 class="mailinglist">Please join our mailing list</h2>
-        <fieldset>
-            <legend>Personal information</legend>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
+        <form>
+            <h2 class="mailinglist">Please join our mailing list</h2>
+            <fieldset>
+                <legend>Personal information</legend>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br><br>
 
-            <label for="address">Address:</label>
-            <input type="text" id="address" name="address" required><br><br>
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address" required><br><br>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
 
-            <label for="phone">Phone:</label>
-            <input type="tel" id="phone" name="phone" required><br><br>
-        </fieldset>
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" required><br><br>
+            </fieldset>
 
-        <fieldset>
-            <legend>Gaming preferences</legend>
-            <label for="rpg">RPG</label>
-            <input type="checkbox" id="rpg" name="rpg"><br>
+            <fieldset>
+                <legend>Gaming preferences</legend>
+                <label for="rpg">RPG</label>
+                <input type="checkbox" id="rpg" name="rpg"><br>
 
-            <label for="fps">FPS</label>
-            <input type="checkbox" id="fps" name="fps"><br>
+                <label for="fps">FPS</label>
+                <input type="checkbox" id="fps" name="fps"><br>
 
-            <label for="strategy">Strategy</label>
-            <input type="checkbox" id="strategy" name="strategy"><br>
+                <label for="strategy">Strategy</label>
+                <input type="checkbox" id="strategy" name="strategy"><br>
 
-            <label for="sports">Sports</label>
-            <input type="checkbox" id="sports" name="sports"><br>
-        </fieldset>
+                <label for="sports">Sports</label>
+                <input type="checkbox" id="sports" name="sports"><br>
+            </fieldset>
 
-        <fieldset>
-            <legend>Weekly Gameplay</legend>
-            <label>How many games do you play per week?</label><br>
-            <input type="radio" id="1game" name="games-per-week" value="1">
-            <label for="1game">1 game</label><br>
-            <input type="radio" id="2games" name="games-per-week" value="2">
-            <label for="2games">2 games</label><br>
-            <input type="radio" id="3to5games" name="games-per-week" value="3-5">
-            <label for="3to5games">3-5 games</label><br>
-            <input type="radio" id="6to10games" name="games-per-week" value="6-10">
-            <label for="6to10games">6-10 games</label><br>
-            <input type="radio" id="morethan10games" name="games-per-week" value="morethan10">
-            <label for="morethan10games">More than 10 games</label><br>
-        </fieldset>
+            <fieldset>
+                <legend>Weekly Gameplay</legend>
+                <label>How many games do you play per week?</label><br>
+                <input type="radio" id="1game" name="games-per-week" value="1">
+                <label for="1game">1 game</label><br>
+                <input type="radio" id="2games" name="games-per-week" value="2">
+                <label for="2games">2 games</label><br>
+                <input type="radio" id="3to5games" name="games-per-week" value="3-5">
+                <label for="3to5games">3-5 games</label><br>
+                <input type="radio" id="6to10games" name="games-per-week" value="6-10">
+                <label for="6to10games">6-10 games</label><br>
+                <input type="radio" id="morethan10games" name="games-per-week" value="morethan10">
+                <label for="morethan10games">More than 10 games</label><br>
+            </fieldset>
 
-        <br>
+            <br>
 
-        <label for="comments">Comments:</label>
-        <textarea id="comments" name="comments"></textarea>
+            <label for="comments">Comments:</label>
+            <textarea id="comments" name="comments"></textarea>
 
-        <br>
-        <br>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-    </form>
+            <br>
+            <br>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
+        </form>
 
-    <footer class="footer-text">
-        <p>Site copyright &copy; 2023 Fenrir</p>
-    </footer>
+        <footer class="footer-text">
+            <p>Site copyright &copy; 2023 Fenrir</p>
+        </footer>
+    </div>
 </body>
 
 </html>
